--- a/registration_form/style.css
+++ b/registration_form/style.css
@@ -1,67 +1,147 @@
-.register
-{
-    position: absolute;
-    height:auto;
-    left:0px;
-    width: 250px;
-}
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-}
-nav ul li{
-    list-style-type: none;
-    display: inline-block;
-    padding: 10px 20px;
-}
-body
-{   display: flex;
-    height:auto;
-    background-image: url(student.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items:center;
-    justify-content: center;
-}
-.user{
-    width: 100%;
-    max-width: 650px;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 28px;
-    border-radius:  10px;
-    box-shadow: inset -2px 2px 2px white ;
-}
-.user label{
-    width:95%;
-    color: white;
-    font-size: 20px;
-    font-weight: 400;
-    margin: 5px 0;
-}
-@media(max-width:600px){
-    .container{
-        min-width: 0px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    height: fit-content;
     }
-    .user{
-        margin-bottom: 12px;
-        width:100%;
+    .container nav{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+    }
     
+    .container nav ul li{
+            list-style-type: none;
+            display: inline-block;
+            padding: 5px 5px;
     }
-    .user:nth-child(2n){
-        justify-content: space-between;
+    .container img.logo{
+        padding: 10px;
+        margin: 10 28px;
+        display:flex;
+        margin: auto;
+        position:relative;
+    }
+    nav ul{
+        float:right;
+        margin-right: 20px;
+    }
+    nav ul li{
+        display:inline-block;
+        margin: 0 25px;
+    }
+    body{
+        display:flex;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+        background: url(student.jpg);
+        background-size: cover;
+    }
+    .container{
+        width: 100%;
+        max-height: 650px;
+        max-width: 650px;
+        background: rgba(0, 0, 0, 0.5);
+        padding: 28px;
+        border-radius: 10px;
+        box-shadow: inset -2px 2px 2px white;
+    }
+    .form-title{
+        font-size: 26px;
+        font-weight: 600;
+        text-align: center;
+        padding-bottom: 0px;
+        color:white;
+        text-shadow: 2px 2px 2px black;
+        border-bottom: solid 1px white;
     }
     .main-user-info{
-        max-height: 380px;
-        overflow: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     
     }
-    .main-user-info::-webkit-scrollbar{
-        width:0
+    .user-input-box{
+        justify-content:end ;
+        display: flex;
+        flex-wrap: wrap;
+        width: 50%;
+        padding-bottom: 15px;
+    
     }
+    .user-input-box label{
+        width:95%;
+        color: white;
+        font-size: 15px;
+        font-weight: 400;
+        margin: 2px 0;
     }
-
-}
+    .user-input-box input{
+        height: 28px;
+        width: 95%;
+        border-radius: 5px;
+        outline:none;
+        border:1px solid grey;
+    }
+    .container label.gender-title{
+        color: white;
+        font-size: 15px;
+        font-weight: 400;
+    }
+    .container label.gender-category{
+        margin: 7px 0;
+        color:white;
+    }
+    .container label.gender-category label{
+        padding:0%;
+    }
+    .container label.gender-category label,
+    .container label.gender-category input,
+    .container label.form-submit-btn input{
+        cursor:pointer;
+    }
+    button.form-submit-btn{
+        margin-top:40px;
+    
+    }
+    label.form-submit-btn input{
+        display: block;
+        width: 100%;
+        margin-top: 10px;
+        font-size: 20px;
+        padding: 10px;
+        border:none;
+        border-radius: 3px;
+        color :white;
+        background: rgba(0, 0, 0, 0.5);
+    }
+    .container button:hover{
+        background: green;
+        color: white;
+    }
+    @media(max-width:600px) {
+        .container{
+            min-width: 0px;
+        }
+        .user-input-box{
+            margin-bottom: 12px;
+            width: 100%;
+        }
+        .user-input-box{
+            justify-content: space-between;
+        }
+        label.gender-category{
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+        .main-user-info{
+            max-height: 380px;
+            overflow: auto;
+        }
+        .main-user-info::-webkit-scrollbar{
+            width:0;
+        }
+    
+    }
