--- a/university/style.css
+++ b/university/style.css
@@ -50,11 +50,18 @@ nav{
     bottom: -10px;
     transition:0.5s;
 }
+.nav_links a:hover,.active a{
+    background-color: blueviolet;
+}
+.nav_bar .nav_links li a:active{
+    background: #e84118;
+    color:white;
+}
 .nav_links ul li a:hover::after{
     width: 100%;
 }
 .nav_links ul li a.active{
-    color:black;
+    color:rgb(190, 16, 16);
     background: white;
 }
 .logo{
@@ -111,6 +118,10 @@ nav{
     font-size: 14px;
     font-weight: 300;
     padding:20px;   
+}
+.options a:active{
+    background:rgb(170, 9, 9);
+    color:white;
 }
 .row{
     display:flex;
@@ -226,32 +237,34 @@ nav{
     margin: 100px;
  }
  .comment-box h3{
-    font-size: 25px;
+    font-size: 20px;
     padding-bottom: 10px;
+    margin-left:200px;
+    text-transform: uppercase;
     word-spacing: 1.2px;
  }
  .comment-form input{
     box-sizing: border-box;
     padding:8px;
     display: table-column;
+    margin-left:150px;
+ }
+ .comment-form textarea,button{
+    margin-left:150px;
  }
  .comment-box {
     border:1px solid #0c0c0c;
-    background:#494848;
-    width:80%;
-    height:50%;
-    margin:50px 10px;
-    padding: 10px 20px;
-}
+    background:#a09d9d;
+    border-radius: 20px;
+    padding: 30px;
+    margin-left:300px;
+    margin-right: 300px;
+ }
 .comment-box input,.comment-box textarea,.comment-box button{
     padding:10px;
-    width:100%;
+    width:50%;
     margin-bottom: 17px;
 
-}
-.comment{
-    display:flex;
-    width:100%;
 }
 .star-widget{
    padding:40px 90px; 
@@ -259,31 +272,33 @@ nav{
    margin-right: 90px;
 }
 .star{
-    width:500px;
-    height:350px;
-    border: 1px solid #252323;
-    margin:40px;
-    margin-right: 50px;
-    background: #535252;
-    border-radius: 20px;
-
+    width:350px;
+    height: 280px;
+    background:#918f8f;
+    margin-top:50px;
+    margin-left:450px;
+    border: 1px solid #0c0c0c;
+    border-radius: 5px;
+    display:flex;
+    align-items: center;
+    justify-items: center;
+    flex-direction: column;
 }
 .star-widget label{
     font-size: 35px;
-    color:#444;
-    padding:18px;
+    color:#232323;  
+    width:16%;  
     float:right;
     transition:all 0.2s ease;
-    width:20%;
 }
 .star-widget input:not(:checked)~label:hover,input:not(:checked)~label:hover~label{
-    color:#fd4;
+    color:rgb(248, 204, 8);
 }
 .star-widget input:checked~label{
-    color:#fd4;
+    color:rgb(246, 203, 10);
 }
 .star-widget input:checked~label{
-    color:#fe7;
+    color:rgb(248, 220, 10);
 }
 .star-widget input{
     display:none;
@@ -317,7 +332,7 @@ nav{
     font-size: 20px;
 }
 .star-widget header{
-    padding:20px 60px;
+    padding:20px 90px;
     padding-top: 60px;
     color:rgb(212, 201, 43);
     font-size: 20px;
@@ -325,12 +340,12 @@ nav{
     width:200%;
 }
 .star-widget textarea{
-    padding:10px;
-
+    padding:8px;
+    margin-left: 50px;
 
 }
 .star-widget .post-btn{
-    padding:15px 90px;
+    padding:15px 0px;
 }
 .star-widget button{
     padding:5px 15px;
